--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,9 +91,9 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
-    <string name="enter_note">Enter note</string>
-    <string name="delete_all_notes">Delete all notes</string>
-    <string name="new_note">New note</string>
-    <string name="edit_note">Edit note</string>
+    <string name="enter_task">Enter task</string>
+    <string name="delete_all_tasks">Delete all tasks</string>
+    <string name="new_task">New task</string>
+    <string name="edit_task">Edit task</string>
     <string name="delete">Delete</string>
 </resources>
