--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,7 +91,7 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
-    <string name="enter_task">Enter task</string>
+    <string name="enter_task">Add Notes to your task</string>
     <string name="delete_all_tasks">Delete all tasks</string>
     <string name="new_task">New task</string>
     <string name="edit_task">Edit task</string>
